--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,9 @@ dependencies {
             'org.springframework.boot:spring-boot-starter-validation',
             'org.springframework.boot:spring-boot-starter-security',
             'jakarta.validation:jakarta.validation-api:3.0.2',
-            'org.flywaydb:flyway-core'
+            'org.flywaydb:flyway-core',
+            'org.apache.poi:poi-ooxml:5.2.4',
+            'javax.activation:activation:1.1'
     )
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
